fix: WinGet uninstall false-positives and add Chocolatey uninstall support
Add post-verification for WinGet uninstall exit codes 0x8A150030 and 0x8A15002F to prevent false failure reports on Chromium-based apps. Track detection source (WinGet/Chocolatey/Registry) per app and route uninstalls through the method that originally detected the package. Add Chocolatey uninstall capability with proper fallback chains. Translate all Chocolatey-related localization keys across all languages.

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "Waarskuwing",
   "Dialog_Error": "Fout",
   "Dialog_Confirmation": "Bevestiging",
+  "Dialog_TerminalOutput_Title": "Terminale Uitvoer",
   "Dialog_ConfirmInstallation": "Bevestig Installasie",
   "Dialog_ConfirmRemoval": "Bevestig Verwydering",
   "Dialog_ConfirmOperation": "Bevestig {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "Besig om ISO te skep",
   "WIMUtil_Button_OpenFolder": "Maak Vouer Oop",
   "Loading_CheckingSystemProtection": "Stelselbeskerming word nagegaan...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Installeer Chocolatey?",
+  "Dialog_Choco_ConsentMessage": "Die installering van hierdie toep het via WinGet misluk. Winhance kan probeer om dit met Chocolatey te installeer, 'n betroubare derdeparty-pakketbestuurder.\n\nChocolatey sal op jou stelsel geïnstalleer word as dit nie reeds is nie.\n\nWil jy voortgaan?",
+  "Dialog_Choco_DontAskAgain": "Moenie my weer vra nie (gebruik altyd Chocolatey as terugval)",
+  "Progress_Choco_Installing": "Installeer Chocolatey-pakketbestuurder...",
+  "Progress_Choco_Installed": "Chocolatey suksesvol geïnstalleer",
+  "Progress_Choco_InstallingPackage": "Installeer '{0}' via Chocolatey...",
+  "Progress_Choco_FallbackAttempt": "WinGet het misluk, probeer Chocolatey vir '{0}'...",
+  "Progress_Choco_UninstallingPackage": "Deïnstalleer '{0}' via Chocolatey...",
+  "Progress_UninstalledSuccess": "{0} is suksesvol gedeïnstalleer",
   "TechnicalDetails_Toggle": "Tegniese Besonderhede",
   "TechnicalDetails_OpenRegedit": "Maak oop in Registerredigeerder",
   "TechnicalDetails_ToggleTooltip": "Wissel Tegniese Besonderhede",
