--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -45,6 +45,7 @@
   "Dialog_Warning": "Warning",
   "Dialog_Error": "Error",
   "Dialog_Confirmation": "Confirmation",
+  "Dialog_TerminalOutput_Title": "Terminal Output",
   "Dialog_ConfirmInstallation": "Confirm Installation",
   "Dialog_ConfirmRemoval": "Confirm Removal",
   "Dialog_ConfirmOperation": "Confirm {0}",
@@ -1504,6 +1505,8 @@
   "Progress_Choco_Installed": "Chocolatey installed successfully",
   "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
   "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Progress_Choco_UninstallingPackage": "Uninstalling '{0}' via Chocolatey...",
+  "Progress_UninstalledSuccess": "Successfully uninstalled {0}",
   "TechnicalDetails_Toggle": "Technical Details",
   "TechnicalDetails_OpenRegedit": "Open in Registry Editor",
   "TechnicalDetails_ToggleTooltip": "Toggle Technical Details",
