--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "Advertencia",
   "Dialog_Error": "Error",
   "Dialog_Confirmation": "Confirmación",
+  "Dialog_TerminalOutput_Title": "Salida de terminal",
   "Dialog_ConfirmInstallation": "Confirmar Instalación",
   "Dialog_ConfirmRemoval": "Confirmar Eliminación",
   "Dialog_ConfirmOperation": "Confirmar {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "Creando ISO",
   "WIMUtil_Button_OpenFolder": "Abrir Carpeta",
   "Loading_CheckingSystemProtection": "Comprobando protección del sistema...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "¿Instalar Chocolatey?",
+  "Dialog_Choco_ConsentMessage": "La instalación de esta aplicación falló mediante WinGet. Winhance puede intentar instalarla usando Chocolatey, un gestor de paquetes de terceros de confianza.\n\nChocolatey se instalará en su sistema si aún no está instalado.\n\n¿Desea continuar?",
+  "Dialog_Choco_DontAskAgain": "No volver a preguntar (usar siempre Chocolatey como alternativa)",
+  "Progress_Choco_Installing": "Instalando el gestor de paquetes Chocolatey...",
+  "Progress_Choco_Installed": "Chocolatey instalado correctamente",
+  "Progress_Choco_InstallingPackage": "Instalando '{0}' mediante Chocolatey...",
+  "Progress_Choco_FallbackAttempt": "WinGet falló, intentando Chocolatey para '{0}'...",
+  "Progress_Choco_UninstallingPackage": "Desinstalando '{0}' mediante Chocolatey...",
+  "Progress_UninstalledSuccess": "{0} se desinstaló correctamente",
   "TechnicalDetails_Toggle": "Detalles técnicos",
   "TechnicalDetails_OpenRegedit": "Abrir en el Editor del Registro",
   "TechnicalDetails_ToggleTooltip": "Alternar detalles técnicos",
