--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "Avertissement",
   "Dialog_Error": "Erreur",
   "Dialog_Confirmation": "Confirmation",
+  "Dialog_TerminalOutput_Title": "Sortie du terminal",
   "Dialog_ConfirmInstallation": "Confirmer l'installation",
   "Dialog_ConfirmRemoval": "Confirmer la suppression",
   "Dialog_ConfirmOperation": "Confirmer {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "Création de l'ISO",
   "WIMUtil_Button_OpenFolder": "Ouvrir le Dossier",
   "Loading_CheckingSystemProtection": "Vérification de la protection du système...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Installer Chocolatey ?",
+  "Dialog_Choco_ConsentMessage": "L'installation de cette application via WinGet a échoué. Winhance peut essayer de l'installer avec Chocolatey, un gestionnaire de paquets tiers de confiance.\n\nChocolatey sera installé sur votre système s'il ne l'est pas déjà.\n\nVoulez-vous continuer ?",
+  "Dialog_Choco_DontAskAgain": "Ne plus me demander (toujours utiliser Chocolatey en secours)",
+  "Progress_Choco_Installing": "Installation du gestionnaire de paquets Chocolatey...",
+  "Progress_Choco_Installed": "Chocolatey installé avec succès",
+  "Progress_Choco_InstallingPackage": "Installation de '{0}' via Chocolatey...",
+  "Progress_Choco_FallbackAttempt": "Échec de WinGet, tentative avec Chocolatey pour '{0}'...",
+  "Progress_Choco_UninstallingPackage": "Désinstallation de '{0}' via Chocolatey...",
+  "Progress_UninstalledSuccess": "{0} a été désinstallé avec succès",
   "TechnicalDetails_Toggle": "Détails techniques",
   "TechnicalDetails_OpenRegedit": "Ouvrir dans l'Éditeur du Registre",
   "TechnicalDetails_ToggleTooltip": "Basculer les détails techniques",
