--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "चेतावनी",
   "Dialog_Error": "त्रुटि",
   "Dialog_Confirmation": "पुष्टि",
+  "Dialog_TerminalOutput_Title": "टर्मिनल आउटपुट",
   "Dialog_ConfirmInstallation": "इंस्टॉलेशन की पुष्टि करें",
   "Dialog_ConfirmRemoval": "हटाने की पुष्टि करें",
   "Dialog_ConfirmOperation": "{0} की पुष्टि करें",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "ISO बनाया जा रहा है",
   "WIMUtil_Button_OpenFolder": "फ़ोल्डर खोलें",
   "Loading_CheckingSystemProtection": "सिस्टम सुरक्षा की जांच हो रही है...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Chocolatey इंस्टॉल करें?",
+  "Dialog_Choco_ConsentMessage": "इस ऐप की WinGet के माध्यम से इंस्टॉलेशन विफल रही। Winhance इसे Chocolatey, एक विश्वसनीय तृतीय-पक्ष पैकेज प्रबंधक, का उपयोग करके इंस्टॉल करने का प्रयास कर सकता है।\n\nयदि Chocolatey पहले से इंस्टॉल नहीं है तो यह आपके सिस्टम पर इंस्टॉल हो जाएगा।\n\nक्या आप आगे बढ़ना चाहते हैं?",
+  "Dialog_Choco_DontAskAgain": "मुझसे दोबारा न पूछें (हमेशा Chocolatey को वैकल्पिक के रूप में उपयोग करें)",
+  "Progress_Choco_Installing": "Chocolatey पैकेज प्रबंधक इंस्टॉल हो रहा है...",
+  "Progress_Choco_Installed": "Chocolatey सफलतापूर्वक इंस्टॉल हुआ",
+  "Progress_Choco_InstallingPackage": "Chocolatey के माध्यम से '{0}' इंस्टॉल हो रहा है...",
+  "Progress_Choco_FallbackAttempt": "WinGet विफल, '{0}' के लिए Chocolatey आज़मा रहे हैं...",
+  "Progress_Choco_UninstallingPackage": "Chocolatey के माध्यम से '{0}' अनइंस्टॉल किया जा रहा है...",
+  "Progress_UninstalledSuccess": "{0} सफलतापूर्वक अनइंस्टॉल किया गया",
   "TechnicalDetails_Toggle": "तकनीकी विवरण",
   "TechnicalDetails_OpenRegedit": "रजिस्ट्री संपादक में खोलें",
   "TechnicalDetails_ToggleTooltip": "तकनीकी विवरण टॉगल करें",
