--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "Figyelmeztetés",
   "Dialog_Error": "Hiba",
   "Dialog_Confirmation": "Megerősítés",
+  "Dialog_TerminalOutput_Title": "Terminál kimenet",
   "Dialog_ConfirmInstallation": "Telepítés megerősítése",
   "Dialog_ConfirmRemoval": "Eltávolítás megerősítése",
   "Dialog_ConfirmOperation": "Megerősítés {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "ISO létrehozása",
   "WIMUtil_Button_OpenFolder": "Mappa megnyitása",
   "Loading_CheckingSystemProtection": "Rendszervédelem ellenőrzése...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Chocolatey telepítése?",
+  "Dialog_Choco_ConsentMessage": "Az alkalmazás telepítése WinGet-en keresztül sikertelen volt. A Winhance megpróbálhatja telepíteni a Chocolatey segítségével, egy megbízható harmadik féltől származó csomagkezelővel.\n\nA Chocolatey telepítésre kerül a rendszerére, ha még nincs telepítve.\n\nSzeretné folytatni?",
+  "Dialog_Choco_DontAskAgain": "Ne kérdezze újra (mindig használja a Chocolatey-t tartalékként)",
+  "Progress_Choco_Installing": "Chocolatey csomagkezelő telepítése...",
+  "Progress_Choco_Installed": "Chocolatey sikeresen telepítve",
+  "Progress_Choco_InstallingPackage": "'{0}' telepítése Chocolatey-vel...",
+  "Progress_Choco_FallbackAttempt": "WinGet sikertelen, Chocolatey próbálkozás a(z) '{0}' csomaghoz...",
+  "Progress_Choco_UninstallingPackage": "'{0}' eltávolítása Chocolatey-vel...",
+  "Progress_UninstalledSuccess": "{0} sikeresen eltávolítva",
   "TechnicalDetails_Toggle": "Műszaki részletek",
   "TechnicalDetails_OpenRegedit": "Megnyitás a Beállításszerkesztőben",
   "TechnicalDetails_ToggleTooltip": "Technikai részletek váltása",
