--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "Įspėjimas",
   "Dialog_Error": "Klaida",
   "Dialog_Confirmation": "Patvirtinimas",
+  "Dialog_TerminalOutput_Title": "Terminalo išvestis",
   "Dialog_ConfirmInstallation": "Patvirtinti diegimą",
   "Dialog_ConfirmRemoval": "Patvirtinti pašalinimą",
   "Dialog_ConfirmOperation": "Patvirtinti {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "Kuriamas ISO",
   "WIMUtil_Button_OpenFolder": "Atidaryti aplanką",
   "Loading_CheckingSystemProtection": "Tikrinama sistemos apsauga...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Įdiegti Chocolatey?",
+  "Dialog_Choco_ConsentMessage": "Šios programos diegimas per WinGet nepavyko. Winhance gali bandyti ją įdiegti naudojant Chocolatey, patikimą trečiosios šalies paketų tvarkyklę.\n\nChocolatey bus įdiegta jūsų sistemoje, jei dar nėra.\n\nAr norite tęsti?",
+  "Dialog_Choco_DontAskAgain": "Daugiau neklausti (visada naudoti Chocolatey kaip atsarginį variantą)",
+  "Progress_Choco_Installing": "Diegiama Chocolatey paketų tvarkyklė...",
+  "Progress_Choco_Installed": "Chocolatey sėkmingai įdiegta",
+  "Progress_Choco_InstallingPackage": "Diegiama '{0}' per Chocolatey...",
+  "Progress_Choco_FallbackAttempt": "WinGet nepavyko, bandoma Chocolatey '{0}'...",
+  "Progress_Choco_UninstallingPackage": "Šalinama '{0}' per Chocolatey...",
+  "Progress_UninstalledSuccess": "{0} sėkmingai pašalinta",
   "TechnicalDetails_Toggle": "Techninė informacija",
   "TechnicalDetails_OpenRegedit": "Atidaryti registro rengyklėje",
   "TechnicalDetails_ToggleTooltip": "Perjungti techninius duomenis",
