--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "Brīdinājums",
   "Dialog_Error": "Kļūda",
   "Dialog_Confirmation": "Apstiprinājums",
+  "Dialog_TerminalOutput_Title": "Termināļa izvade",
   "Dialog_ConfirmInstallation": "Apstiprināt instalāciju",
   "Dialog_ConfirmRemoval": "Apstiprināt noņemšanu",
   "Dialog_ConfirmOperation": "Apstiprināt {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "Veido ISO",
   "WIMUtil_Button_OpenFolder": "Atvērt mapi",
   "Loading_CheckingSystemProtection": "Pārbauda sistēmas aizsardzību...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Instalēt Chocolatey?",
+  "Dialog_Choco_ConsentMessage": "Šīs lietotnes instalēšana caur WinGet neizdevās. Winhance var mēģināt to instalēt, izmantojot Chocolatey, uzticamu trešās puses pakotņu pārvaldnieku.\n\nChocolatey tiks instalēts jūsu sistēmā, ja tas vēl nav.\n\nVai vēlaties turpināt?",
+  "Dialog_Choco_DontAskAgain": "Nejautāt vēlreiz (vienmēr izmantot Chocolatey kā rezervi)",
+  "Progress_Choco_Installing": "Instalē Chocolatey pakotņu pārvaldnieku...",
+  "Progress_Choco_Installed": "Chocolatey veiksmīgi instalēts",
+  "Progress_Choco_InstallingPackage": "Instalē '{0}' ar Chocolatey...",
+  "Progress_Choco_FallbackAttempt": "WinGet neizdevās, mēģina Chocolatey '{0}'...",
+  "Progress_Choco_UninstallingPackage": "Atinstalē '{0}' ar Chocolatey...",
+  "Progress_UninstalledSuccess": "{0} veiksmīgi atinstalēts",
   "TechnicalDetails_Toggle": "Tehniskie dati",
   "TechnicalDetails_OpenRegedit": "Atvērt reģistra redaktorā",
   "TechnicalDetails_ToggleTooltip": "Pārslēgt tehniskos datus",
