--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "Varning",
   "Dialog_Error": "Fel",
   "Dialog_Confirmation": "Bekräftelse",
+  "Dialog_TerminalOutput_Title": "Terminalutdata",
   "Dialog_ConfirmInstallation": "Bekräfta installation",
   "Dialog_ConfirmRemoval": "Bekräfta borttagning",
   "Dialog_ConfirmOperation": "Bekräfta {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "Skapar ISO",
   "WIMUtil_Button_OpenFolder": "Öppna mapp",
   "Loading_CheckingSystemProtection": "Kontrollerar systemskydd...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Installera Chocolatey?",
+  "Dialog_Choco_ConsentMessage": "Installationen av denna app via WinGet misslyckades. Winhance kan försöka installera den med Chocolatey, en pålitlig pakethanterare från tredje part.\n\nChocolatey kommer att installeras på ditt system om det inte redan finns.\n\nVill du fortsätta?",
+  "Dialog_Choco_DontAskAgain": "Fråga inte igen (använd alltid Chocolatey som reserv)",
+  "Progress_Choco_Installing": "Installerar Chocolatey-pakethanteraren...",
+  "Progress_Choco_Installed": "Chocolatey har installerats",
+  "Progress_Choco_InstallingPackage": "Installerar '{0}' via Chocolatey...",
+  "Progress_Choco_FallbackAttempt": "WinGet misslyckades, försöker Chocolatey för '{0}'...",
+  "Progress_Choco_UninstallingPackage": "Avinstallerar '{0}' via Chocolatey...",
+  "Progress_UninstalledSuccess": "{0} har avinstallerats",
   "TechnicalDetails_Toggle": "Tekniska detaljer",
   "TechnicalDetails_OpenRegedit": "Öppna i Registereditorn",
   "TechnicalDetails_ToggleTooltip": "Växla tekniska detaljer",
