--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "警告",
   "Dialog_Error": "错误",
   "Dialog_Confirmation": "确认",
+  "Dialog_TerminalOutput_Title": "终端输出",
   "Dialog_ConfirmInstallation": "确认安装",
   "Dialog_ConfirmRemoval": "确认移除",
   "Dialog_ConfirmOperation": "确认 {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "正在创建 ISO",
   "WIMUtil_Button_OpenFolder": "打开文件夹",
   "Loading_CheckingSystemProtection": "正在检查系统保护...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "安装 Chocolatey？",
+  "Dialog_Choco_ConsentMessage": "通过 WinGet 安装此应用失败。Winhance 可以尝试使用 Chocolatey（一个受信任的第三方包管理器）来安装。\n\n如果尚未安装，Chocolatey 将被安装到您的系统中。\n\n是否继续？",
+  "Dialog_Choco_DontAskAgain": "不再询问（始终使用 Chocolatey 作为备选）",
+  "Progress_Choco_Installing": "正在安装 Chocolatey 包管理器...",
+  "Progress_Choco_Installed": "Chocolatey 安装成功",
+  "Progress_Choco_InstallingPackage": "正在通过 Chocolatey 安装 '{0}'...",
+  "Progress_Choco_FallbackAttempt": "WinGet 失败，正在尝试使用 Chocolatey 安装 '{0}'...",
+  "Progress_Choco_UninstallingPackage": "正在通过 Chocolatey 卸载 '{0}'...",
+  "Progress_UninstalledSuccess": "已成功卸载 {0}",
   "TechnicalDetails_Toggle": "技术详情",
   "TechnicalDetails_OpenRegedit": "在注册表编辑器中打开",
   "TechnicalDetails_ToggleTooltip": "切换技术详情",
