--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "Avviso",
   "Dialog_Error": "Errore",
   "Dialog_Confirmation": "Conferma",
+  "Dialog_TerminalOutput_Title": "Output del terminale",
   "Dialog_ConfirmInstallation": "Conferma installazione",
   "Dialog_ConfirmRemoval": "Conferma rimozione",
   "Dialog_ConfirmOperation": "Conferma {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "Creazione ISO",
   "WIMUtil_Button_OpenFolder": "Apri cartella",
   "Loading_CheckingSystemProtection": "Verifica della protezione di sistema...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Installare Chocolatey?",
+  "Dialog_Choco_ConsentMessage": "L'installazione di questa app tramite WinGet non è riuscita. Winhance può provare a installarla usando Chocolatey, un gestore di pacchetti di terze parti affidabile.\n\nChocolatey verrà installato sul sistema se non è già presente.\n\nVuoi procedere?",
+  "Dialog_Choco_DontAskAgain": "Non chiedere più (usa sempre Chocolatey come alternativa)",
+  "Progress_Choco_Installing": "Installazione del gestore pacchetti Chocolatey...",
+  "Progress_Choco_Installed": "Chocolatey installato con successo",
+  "Progress_Choco_InstallingPackage": "Installazione di '{0}' tramite Chocolatey...",
+  "Progress_Choco_FallbackAttempt": "WinGet non riuscito, tentativo con Chocolatey per '{0}'...",
+  "Progress_Choco_UninstallingPackage": "Disinstallazione di '{0}' tramite Chocolatey...",
+  "Progress_UninstalledSuccess": "{0} disinstallato con successo",
   "TechnicalDetails_Toggle": "Dettagli tecnici",
   "TechnicalDetails_OpenRegedit": "Apri nell'Editor del Registro",
   "TechnicalDetails_ToggleTooltip": "Attiva/Disattiva dettagli tecnici",
