--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "Ostrzeżenie",
   "Dialog_Error": "Błąd",
   "Dialog_Confirmation": "Potwierdzenie",
+  "Dialog_TerminalOutput_Title": "Wyjście terminala",
   "Dialog_ConfirmInstallation": "Potwierdź instalację",
   "Dialog_ConfirmRemoval": "Potwierdź usunięcie",
   "Dialog_ConfirmOperation": "Potwierdź {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "Tworzenie ISO",
   "WIMUtil_Button_OpenFolder": "Otwórz folder",
   "Loading_CheckingSystemProtection": "Sprawdzanie ochrony systemu...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "Zainstalować Chocolatey?",
+  "Dialog_Choco_ConsentMessage": "Instalacja tej aplikacji przez WinGet nie powiodła się. Winhance może spróbować zainstalować ją za pomocą Chocolatey, zaufanego menedżera pakietów.\n\nChocolatey zostanie zainstalowany w systemie, jeśli jeszcze go nie ma.\n\nCzy chcesz kontynuować?",
+  "Dialog_Choco_DontAskAgain": "Nie pytaj ponownie (zawsze używaj Chocolatey jako zapasowego)",
+  "Progress_Choco_Installing": "Instalowanie menedżera pakietów Chocolatey...",
+  "Progress_Choco_Installed": "Chocolatey zainstalowany pomyślnie",
+  "Progress_Choco_InstallingPackage": "Instalowanie '{0}' przez Chocolatey...",
+  "Progress_Choco_FallbackAttempt": "WinGet nie powiódł się, próbuję Chocolatey dla '{0}'...",
+  "Progress_Choco_UninstallingPackage": "Odinstalowywanie '{0}' przez Chocolatey...",
+  "Progress_UninstalledSuccess": "Pomyślnie odinstalowano {0}",
   "TechnicalDetails_Toggle": "Szczegóły techniczne",
   "TechnicalDetails_OpenRegedit": "Otwórz w Edytorze rejestru",
   "TechnicalDetails_ToggleTooltip": "Przełącz szczegóły techniczne",
