--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -43,6 +43,7 @@
   "Dialog_Warning": "警告",
   "Dialog_Error": "錯誤",
   "Dialog_Confirmation": "確認",
+  "Dialog_TerminalOutput_Title": "終端輸出",
   "Dialog_ConfirmInstallation": "確認安裝",
   "Dialog_ConfirmRemoval": "確認移除",
   "Dialog_ConfirmOperation": "確認 {0}",
@@ -1497,13 +1498,15 @@
   "WIMUtil_Status_CreatingIso": "正在建立 ISO",
   "WIMUtil_Button_OpenFolder": "開啟資料夾",
   "Loading_CheckingSystemProtection": "正在檢查系統保護...",
-  "Dialog_Choco_ConsentTitle": "Install Chocolatey?",
-  "Dialog_Choco_ConsentMessage": "The installation for this app failed via WinGet. Winhance can try to install it using Chocolatey, a trusted third-party package manager.\n\nChocolatey will be installed on your system if it isn't already.\n\nWould you like to proceed?",
-  "Dialog_Choco_DontAskAgain": "Don't ask me again (always use Chocolatey as fallback)",
-  "Progress_Choco_Installing": "Installing Chocolatey package manager...",
-  "Progress_Choco_Installed": "Chocolatey installed successfully",
-  "Progress_Choco_InstallingPackage": "Installing '{0}' via Chocolatey...",
-  "Progress_Choco_FallbackAttempt": "WinGet failed, trying Chocolatey for '{0}'...",
+  "Dialog_Choco_ConsentTitle": "安裝 Chocolatey？",
+  "Dialog_Choco_ConsentMessage": "透過 WinGet 安裝此應用程式失敗。Winhance 可以嘗試使用 Chocolatey（一個受信任的第三方套件管理器）來安裝。\n\n如果尚未安裝，Chocolatey 將被安裝到您的系統中。\n\n是否繼續？",
+  "Dialog_Choco_DontAskAgain": "不再詢問（始終使用 Chocolatey 作為備選）",
+  "Progress_Choco_Installing": "正在安裝 Chocolatey 套件管理器...",
+  "Progress_Choco_Installed": "Chocolatey 安裝成功",
+  "Progress_Choco_InstallingPackage": "正在透過 Chocolatey 安裝 '{0}'...",
+  "Progress_Choco_FallbackAttempt": "WinGet 失敗，正在嘗試使用 Chocolatey 安裝 '{0}'...",
+  "Progress_Choco_UninstallingPackage": "正在透過 Chocolatey 解除安裝 '{0}'...",
+  "Progress_UninstalledSuccess": "已成功解除安裝 {0}",
   "TechnicalDetails_Toggle": "技術詳情",
   "TechnicalDetails_OpenRegedit": "在登錄編輯器中開啟",
   "TechnicalDetails_ToggleTooltip": "切換技術詳情",
